--- a/css/style.css
+++ b/css/style.css
@@ -8,11 +8,12 @@ body {
     background-repeat: no-repeat; 
     background-position: center;
     background-size: cover;
+    width: 100%;
+    height: 100%;    
 }
 
 canvas {
-    margin-left: 13%;
-    margin-right: 13%;
-    margin-top: 5%;
+    width: 100%;
+    height: 100%;
     background-color: rgba(6, 29, 48, 0.412)
 }
